# call_c_func_from_go

./: main.go
lib/: CMakeLists.txt
lib/src/: hoge.c
